deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
  namespace: book-service
spec:
  replicas: 1
  selector:
    matchLabels:
      run: petclinic
  template:
    metadata:
      labels:
        run: petclinic
    spec:
      containers:
        - image: harbor.mgmt.tkg-aws2-lab.winterfell.live/petclinic/petclinic:latest
          name: petclinic
