ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: petclinic
  namespace: petclinic
spec:
  rules:
    - host: petclinic.mgmt.tkg-aws2-lab.winterfell.live
      http:
        paths:
          - backend:
              serviceName: petclinic
              servicePort: 80
